# rsx-science

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py  test.py
arduino_scripts/: drill_test.ino  multispectral_servo.ino  optical_test.ino
arduino_scripts/drill_test/: drill_test.ino
arduino_scripts/optical_test/: optical_test.ino
launch/: science.launch.py
msg/: SCP.msg  Science.msg
science/: CAN_utilities.py  __init__.py  bme_ble_receiving.py  genie_cam_calibration.py  hello_science.py  multispectral_servo_move.ino  pub_image.py  requirements.txt  science_can.py  science_test.py  sub.py
science/comms/: __init__.py  ble_recv.py  ble_recv_eth.py  bme_ble_receiving.py  eth_receiver.py  eth_sender.py  scienceCAN_recv.py  scienceCAN_send.py  science_can.py  science_controller.py  science_gui.py
science/genie_cam/: genie_cam_calibration.py  geniecam_publisher.py
science/gui/: science_controller.py  science_test.py
