<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>science</name>
  <version>0.0.0</version>
  <description>Package description</description>
  <maintainer email="thy_mother@pp.com">rsx-science</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_python</buildtool_depend> -->

  <!-- Message Generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Needed if "rosidl_generate_interfaces" is used in the cmake -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Dependencies -->
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <!-- <exec_depend>science</science> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_dpened> -->

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
  </export>
</package>
